--- a/app/globals.css
+++ b/app/globals.css
@@ -12,3 +12,20 @@
 body {
 	background-color: #111827;
 }
+
+/* Scroll Bar */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: #111827;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #1f2937;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #1f2937;
+}
